# personal-finance-data-platform

./: .gitignore  pyproject.toml
data_ingestion/: main.py
data_ingestion/extractors/ibkr/: IBAccountSummary.py
data_ingestion/loaders/: local_datalake.py
src/personal_finance_data_platform/: IBAccountSummary.py
